[package]
name = "infinite-stream"
version = "0.1.0"
edition = "2021"

[lints.rust]
#missing_docs = "deny" #TODO
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
futures = "0.3.30"
pin-project = "1.1.4"
tokio-stream = { version = "0.1.14", optional = true, features = ["time"] }

[features]
tokio-stream = ["dep:tokio-stream"]
