[package]
name = "infinite-stream"
version = "0.2.0"
edition = "2024"
description = "Streams (asynchronous iterators) that always keep yielding items (or panic, or become pending forever)"
license = "MIT"
repository = "https://github.com/fenhl/infinite-stream"

[lints.rust]
#missing_docs = "deny" #TODO
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[dependencies]
futures = "0.3"
pin-project = "1"
tokio-stream = { version = "0.1", optional = true, features = ["time"] }

[features]
tokio-stream = ["dep:tokio-stream"]
